fix: overflow due to modal and zIndex on smaller heights

--- a/styles/_modal.module.scss
+++ b/styles/_modal.module.scss
@@ -1,9 +1,9 @@
 .modal {
-  @apply overflow-y-auto fixed inset-0 z-10;
+  @apply overflow-y-auto fixed inset-0 z-30;
 }
 
 .ctr {
-  @apply flex justify-center items-center p-4 min-h-screen text-center sm:block;
+  @apply flex justify-center items-center px-4 min-h-screen text-center sm:block;
 }
 
 .overlay {
